# YetAnotherRaycaster

./: .gitignore  CMakeLists.txt  README.md  out.txt  sfml-app  start.sh
src/: Boundary.hpp  Particle.cpp  Particle.h  Particle.hpp  Ray.cpp  Ray.h  Ray.hpp  Rays.cpp  Rays.h  Vector.hpp  config.hpp  main.cpp  operations.cpp  operations.h  operations.hpp
